# claude-code-usage

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Design_System.md  LICENSE  MIGRATION_PLAN.md  MIGRATION_PLAYBOOK.md  PRD.md  README.md  SECURITY.md  eslint.config.mjs  metadata.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/21841-1776968235/content/: header-layouts.html
.superpowers/brainstorm/21841-1776968235/state/: server-stopped
docs/: AGENT_PLAYBOOK.md  MIGRATION_PLAN.md  README.md  index.html
docs/superpowers/plans/: 2026-04-19-ai-pulse-phase3-playbook.md  2026-04-26-dashboard-redesign.md
docs/superpowers/specs/: 2026-04-24-dashboard-redesign-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json  report.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  DetailedReport.tsx  LiquidGauge.tsx  Menubar.tsx  ReportWindow.tsx  SettingsModal.tsx  UsageChart.tsx
src/lib/: claudeUsage.ts  codexUsage.ts  data.ts  exportCsv.ts  ipcSchemas.ts  store.ts
