[package]
name = "ai-pulse"
version = "0.1.0"
description = "AI Pulse - macOS menubar token/cost monitor"
authors = []
edition = "2021"

[lib]
name = "ai_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
objc2 = "0.6.4"
window-vibrancy = "0.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

